<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string translatable="false" name="app_name">GymDon</string>
    <string name="action_settings">Einstellungen</string>
    <string name="welcome_message">Herzlich Willkommen bei der App des Gymnasium Donauwörth</string>
    <string name="username_message">Bitte Benutzername eingeben:</string>
    <string name="password_message">Bitte Passwort eingeben:</string>
    <string name="login">Login</string>
    <string name="today">Heute</string>
    <string name="tomorrow">Morgen</string>
    <string name="show_ticker">Ticker anzeigen</string>
    <string name="no_ticker">Keine Ticker vorhanden</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="pref_toast">Ticker</string>
    <string name="pref_toast_summary">Als Toast anzeigen</string>
    <string name="pref_toast_summary_false">Als Dialog anzeigen</string>
    <string name="ticker">Ticker</string>
    <string name="ticker_dialog_title">Ticker</string>
    <string translatable="false" name="ok">OK</string>
    <string name="error">Fehler</string>
    <string name="server_request_failed">Geben sie einen gültigen Benutzernamen an oder wenden Sie sich an die Herausgeber dieser App.</string>
    <string name="really_logout">Wollen Sie sich wirklich abmelden ?</string>
    <string translatable="false" name="logout">Logout</string>
    <string name="no_internet_connection">Bitte aktivieren Sie WLAN oder mobile Daten.</string>
    <string name="loading_plan">Lädt Daten…</string>
    <string name="loading_changelog">Lädt Neuerungen…</string>
    <string name="reload_plan">Daten aktualisieren</string>
    <string name="pref_logout">Logout bestätigen</string>
    <string name="pref_clear_cache">Cache leeren</string>
    <string name="pref_clear_cache_summary">Neuladen des Plans erzwingen</string>
    <string name="pref_creator">Ersteller</string>
    <string translatable="false" name="pref_creator_summary">Alexander Krabler, Simon Klimaschka, Simon Wanner</string>
    <string translatable="false" name="pref_version">Version</string>
    <string translatable="false" name="pref_github">Github</string>
    <string translatable="false" name="pref_github_summary">https://github.com/GymDon/VPlanApp</string>
    <string name="pref_notifications">Benachichtigungen</string>
    <string name="pref_vibrate">Vibrieren</string>
    <string name="cache_cleared">Cache geleert</string>
    <string name="advanced">Fortgeschritten</string>
    <string name="old_data_message">Dieser alte Stand der Daten ist von: </string>
    <string name="no_internet_connection_title">Keine Internetverbindung</string>
    <string name="usernanme">Benutzername der Daten : </string>
    <string name="others">Andere Änderungen</string>
    <string name="whatsnew">Neuerungen</string>
    <string name="whatsnewNews">Neu in dieser Version:</string>
    <string name="action_changelog">Neuerungen</string>
    <string name="info">Informationen</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="replacements_changed">Vertretungen geändert</string>
    <string name="others_changed">Andere Änderungen geändert</string>
    <string name="tickers_changed">Ticker geändert</string>
    <string name="pages_changed">Seiten geändert</string>
    <string name="data_changed">Geänderte Daten</string>
    <string translatable="false" name="auto_synchronisation">Synchronisation</string>
    <string translatable="false" name="synchronisation_title">Auto Sync</string>
    <string name="synchronisation_interval">Synchronisationsintervall</string>
    <string name="home_welcome_message">"Herzlich Willkommen bei der GymDon App.\n\nMithilfe dieser App kannst du die neuesten Termine, Mensaspeisepläne und deinen persönlichen Vertretungsplan einsehen.\n\nViel Spaß!\n- Die GymDon App Entwickler."</string>
    <string name="not_yet_implemented">Diese Funktion wurde bis jetzt noch nicht implementiert</string>
    <string name="open_navigation_drawer">Öffne Navigation Drawer</string>
    <string name="close_navigation_drawer">Schließe Navigation Drawer</string>
    <string name="error_found_user">Bug gefunden?</string>
    <string name="error_found_user_summary">Klick hier und sende einen Bugreport!</string>
    <string translatable="false" name="icon">Icon</string>
    <string name="menu1">Menü 1: </string>
    <string name="menu2">Menü 2: </string>
    <string name="main_group">Hauptgruppe: </string>
    <string name="groups">Gruppen: </string>
    <string name="update_available_title">Update verfügbar</string>
    <string name="update_available_text">Ein Update für diese App ist verfügbar!</string>
    <string name="download">Download</string>
    <string name="dismiss">Jetzt nicht</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="cancel">Abbrechen</string>
    <string name="login_needed">Hierfür müssen sie eingeloggt sein</string>
    <string name="no_data">Keine Daten verfügbar</string>
    <string name="no_username">Kein Benutzername angegeben</string>
    <string name="no_password">Kein Passwort angegeben</string>
    <string name="additional_notes">Zusätzliche Infos</string>
    <string name="logged_out">Ausgeloggt!</string>
    
    <string-array name="synchronisation_interval_entries">
        <item>5 Minuten</item>
        <item>10 Minuten</item>
        <item>30 Minuten</item>
        <item>1 Stunde</item>
        <item>2 Stunden</item>
    </string-array>
    <string-array name="synchronisation_interval_entryValues">
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <string-array name="navigation_list">
        <item>Home</item>
        <item>Vertretungsplan</item>
        <item>Mensa</item>
        <item>Termine</item>
    </string-array>
    <string-array name="mensa_types">
        <item>Menü 1</item>
        <item>Menü 2</item>
        <item>Salat</item>
        <item>Suppe</item>
    </string-array>

</resources>
