<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vplan="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_show_ticker"
        android:icon="@drawable/ic_action_about"
        android:title="@string/show_ticker"
        android:visible="false"
        vplan:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_reload_plan"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/reload_plan"
        vplan:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_login"
        android:title="@string/login"
        vplan:showAsAction="never"/>
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        vplan:showAsAction="never"/>

</menu>
